<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/list_item">

    <TextView
            android:text="@string/update_group_title"
            style="@style/MTECTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/group_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:hint="@string/group_title_hint"
            style="@style/MTECInput" />

    <EditText
            android:id="@+id/group_full_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:hint="@string/group_full_title_hint"
            style="@style/MTECInput" />

    <EditText
            android:id="@+id/group_speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:hint="@string/group_speciality_hint"
            style="@style/MTECInput" />

    <EditText
            android:id="@+id/group_course"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="number"
            android:maxLength="1"
            android:hint="@string/group_course_hint"
            style="@style/MTECInput" />

    <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:text="@string/close_button_text"
                style="@style/MTECButtonCancel"
                android:layout_weight="0.33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
                android:layout_weight="0.33"
                android:layout_width="0dp"
                android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/apply_button"
                android:text="@string/change_button_text"
                style="@style/MTECButtonApply"
                android:layout_weight="0.33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>