<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScheduleActivity">

    <TextView
            android:text="@string/group_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupTitle"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/heart"
            android:id="@+id/imageView2"
            android:contentDescription="@string/img_desc"
            app:layout_constraintTop_toTopOf="@+id/groupTitle"
            app:layout_constraintStart_toEndOf="@+id/groupTitle"
            android:layout_marginStart="8dp" />

    <TextView
            android:text="@string/date_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:id="@+id/date"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/groupTitle"
            android:layout_marginEnd="16dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/couples_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/groupTitle"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>